# fast-irc-pairing-server

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
lib/: Cargo.toml
lib/src/: certificates.rs  client.rs  config.rs  lib.rs  messages.rs
server/: Cargo.toml
server/src/: client_acceptor.rs  conn_handler_manager.rs  main.rs  quic.rs
