[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = { version = "*", features = ["dangerous_configuration", "quic"]}
rcgen = "0.8.14"
quinn = "0.8.0"
bincode = "2.0.0-beta.2"
tokio = {version = "1.16.1", features = ["io-util", "macros", "net"]}
thiserror = "1.0.30"